testdata/baselines/reference/compiler/autoTypeJsLiteral1.errors.txt
EnvironmentPlugin.js(13,18): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
  No index signature with a parameter of type 'string' was found on type '{}'.


==== EnvironmentPlugin.js (1 errors) ====
    /** @typedef {string | number | boolean} CodeValue */
    
    class EnvironmentPlugin {
    	constructor() {
            this.keys = /** @type {string[]} */ ([]);
    		this.defaultValues = {};
    	}
    
    	apply() {
    		/** @type {Record<string, CodeValue>} */
    		const definitions = {};
    		for (const key of this.keys) {
    			const value = this.defaultValues[key];
    			              ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{}'.
    			definitions[key] = value;
    		}
    	}
    }
    